# donft_solana

./: README.md
crypto/: Cargo.toml  Makefile  README.md
crypto/src/: lib.rs
crypto/tests/: lib.rs
frontend/: .env  .eslintrc.js  Dockerfile  README.md  README_SOLANA.md  package.json  vue.config.js
frontend/public/: index.html
frontend/src/: App.vue  main.js  solanaInit.js
frontend/src/api/: index.js
frontend/src/assets/svg/: CheckCircleSvg.vue  CrossSvg.vue  PencilSvg.vue  UploadSvg.vue  index.js
frontend/src/components/EffectCards/: EffectCards.vue
frontend/src/components/HeadBar/: HeadBar.vue
frontend/src/components/IconComponent/: Icon.vue
frontend/src/components/ModalTemplate/: ModalTemplate.vue
frontend/src/components/NavBar/: NavBar.vue
frontend/src/components/Spinner/: SpinnerDots.vue  SpinnerFadingCircle.vue  index.js
frontend/src/components/TakePhoto/: TakePhoto.vue
frontend/src/components/TokenCard/: TokenCard.vue
frontend/src/components/Uploader/: UploaderComp.vue
frontend/src/mixins/: StatusMixin.js
frontend/src/router/: index.js
frontend/src/solana_utilities/: index.js
frontend/src/store/: index.js
frontend/src/styles/: _fonts.scss  _general_set.scss  _mixins.scss  app.scss
frontend/src/utilities/: index.js
frontend/src/views/: AddEffect.vue  AddEffectConfirm.vue  BundleNFT.vue  ChooseNFT.vue  CreateNFT.vue  LoginView.vue  NFTDetails.vue  SendNFT.vue
