
[package]
name = "solana-bpf-donft"
version = "0.0.1"
description = "Program to bundle NFTs"
authors = ["Kostya <unordered_set@tutanota.com>"]
repository = "https://github.com/DoNFT/DoNFT-MVP-Solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.1"
solana-program = "~1.8.14"
spl-token = { version = "3.1.0", features = ["no-entrypoint"] }

[dev-dependencies]
solana-program-test = "~1.8.14"
solana-sdk = "~1.8.14"

[lib]
name = "donft"
crate-type = ["cdylib", "lib"]
